fix/bg_on_mob: resolve background color on mobile
Resolve to fix background color on mobile viewport

--- a/src/sass/_xsmall/page_end.sass
+++ b/src/sass/_xsmall/page_end.sass
@@ -46,6 +46,7 @@
       width: 100%
       input
         width: 100%
+        background-color: $white
     .email-signup-btn
       margin-top: 40px
       width: 100%
