--- a/src/sass/components/page_end.sass
+++ b/src/sass/components/page_end.sass
@@ -118,6 +118,7 @@
           background-color: $eye-searing-red
           color: $white
   .email-signup-msg
+    height: 18px
     +font-bold()
     font-size: 16px
     color: $eye-searing-red
